--- a/Clients/Clients.csproj
+++ b/Clients/Clients.csproj
@@ -148,6 +148,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -163,6 +164,14 @@
     <Compile Include="Migrations\201802151411593_AddClientMigration.cs" />
     <Compile Include="Migrations\201802151411593_AddClientMigration.Designer.cs">
       <DependentUpon>201802151411593_AddClientMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802160857529_AddClientRequiredMigration.cs" />
+    <Compile Include="Migrations\201802160857529_AddClientRequiredMigration.Designer.cs">
+      <DependentUpon>201802160857529_AddClientRequiredMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802160920237_AddClientGenderMigration.cs" />
+    <Compile Include="Migrations\201802160920237_AddClientGenderMigration.Designer.cs">
+      <DependentUpon>201802160920237_AddClientGenderMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Client.cs" />
@@ -329,6 +338,7 @@
     <Content Include="Content\dropdown.min.js" />
     <Content Include="Content\semantic.css" />
     <Content Include="Content\semantic.min.css" />
+    <Content Include="Content\semantic.min.js" />
     <Content Include="Content\themes\basic\assets\fonts\icons.svg" />
     <Content Include="Content\themes\default\assets\fonts\icons.svg" />
     <Content Include="Content\themes\default\assets\images\flags.png" />
@@ -379,6 +389,11 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Person.cshtml" />
+    <Content Include="Views\Clients\Create.cshtml" />
+    <Content Include="Views\Clients\Delete.cshtml" />
+    <Content Include="Views\Clients\Details.cshtml" />
+    <Content Include="Views\Clients\Edit.cshtml" />
+    <Content Include="Views\Clients\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -404,6 +419,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802151411593_AddClientMigration.resx">
       <DependentUpon>201802151411593_AddClientMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802160857529_AddClientRequiredMigration.resx">
+      <DependentUpon>201802160857529_AddClientRequiredMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802160920237_AddClientGenderMigration.resx">
+      <DependentUpon>201802160920237_AddClientGenderMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
